--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -14,7 +14,7 @@
         {{>header}}
     </div>
         <form>
-            <input>
+            <input placeholder="Location">
             <button>Search</button>
         </form>
         <p id="m1"></p>
